Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </ul>
       </header>
       <section>
-        <p>This site contains all the Python code of the Oxford University Press book Data Science &amp; Complex Networks in the form of Jupyter Notebooks. You can retrieve it both downloading a zip/tarball file or with a git clone command (see the links on the left).</p>
+        <p>This site contains all the Python code of the Oxford University Press book <a href="https://global.oup.com/academic/product/data-science-and-complex-networks-9780199639601">Data Science &amp; Complex Networks</a> in the form of Jupyter Notebooks. You can retrieve it both downloading a zip/tarball file or with a git clone command (see the links on the left).</p>
 
 <h3>
 <a id="about-the-book" class="anchor" href="#about-the-book" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>About the book</h3>
